# gymdesk

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: index.py
app/: main.py
app/api/: routes.py
app/core/: config.py  database.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: auth.py
app/static/: styles.css
app/templates/: index.html
tests/: test_api.py
