[project]
name = "adamdesk"
version = "0.1.0"
description = "AdamDesk - multi-tenant gym operations SaaS"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.0",
  "email-validator>=2.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.19",
  "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "httpx>=0.28.1", "ruff>=0.8.3"]

[tool.pytest.ini_options]
pythonpath = ["."]
